Cleaned up profile page a bit, added an unlist item function. Also added bottom  padding to fix the footer overlap issue

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -10,4 +10,5 @@ html, body{
 }
 .content{
     flex: 1;
+    padding-bottom: 100px;
 }
